tests/errors/same_type_as.f90
program same_type_as
    print *, SAME_TYPE_AS(1.0, 1.0)
end program 